[package]
name = "spider"
version = "0.1.0"
edition = "2018"
default-run = "spider"

[[bin]]
name = "spider"
path = "src/main.rs"

[[bin]]
name = "example-bin"
path = "src/bin/example.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive", "unicode"] }
crossbeam = "0.8.1"
crossterm = "0.23.2"
nix = { version = "0.24.1", features = ["ptrace"] }
rustyline = "9.1.2"
tokio = { version = "1.18.2", features = ["full"] }
tui = "0.18.0"
unicode-width = "0.1.9"
